Freedom Sanbox Ant Deploy/src/objects/Conveyance_Manager__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Claimed__c</fullName>
        <label>Amount Claimed</label>
        <summarizedField>Conveyance_Detail__c.Amount__c</summarizedField>
        <summaryForeignKey>Conveyance_Detail__c.Conveyance_Manager__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Reimbursed__c</fullName>
        <label>Amount Reimbursed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Travel__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Travel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Conveyance_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the convenance is submitted then this flag set to true.</description>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode_of_Travel__c</fullName>
        <label>Mode of Travel</label>
        <picklist>
            <picklistValues>
                <fullName>Cab</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Reimbursement_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Reimbursement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Type__c</fullName>
        <label>Travel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Conveyance</label>
    <nameField>
        <label>Conveyance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conveyances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>